p2/confs/app-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <app-name>
  labels:
    app: <app-name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <app-name>
  template:
    metadata:
      labels:
        app: <app-name>
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: IfNotPresent
        name: <app-name>
        command: ["/bin/sh"]
        args: ["-c", "echo '<h1><app-name></h1>' >> /usr/share/nginx/html/index.html; nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: <app-name>
  labels:
    app: <app-name>
spec:
  type: ClusterIP
  selector:
    app: <app-name>
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
